welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:10: error: Missing closing brace `}' assumed here
}
^Program:15: error: expected class or object definition
move(nbPas: Int,versLAvant: Boolean){
^